@@ -820,6 +820,7 @@ pub mod prelude {
 
     pub use traits::{EntityKey, EntityKeyTyped, EntityKeySelectable};
     pub use traits::{WorldCanResolve, ArchetypeCanResolve, StorageCanResolve};
+    pub use traits::{SelectViewCanAccess, SelectViewCanAccessMut, SelectBorrowCanAccess};
 
     pub use traits::{World, WorldHas};
     pub use traits::{Archetype, ArchetypeHas};
@@ -853,10 +854,12 @@ pub mod __internal {
 
     pub use iter::{EcsStepDestroy, EcsStep};
 
-    pub use traits::EntityKey;
+    pub use traits::{EntityKey, EntityKeyTyped, EntityKeySelectable};
     pub use traits::{WorldCanResolve, ArchetypeCanResolve, StorageCanResolve};
+    pub use traits::{SelectViewCanAccess, SelectViewCanAccessMut, SelectBorrowCanAccess};
 
     pub use traits::{World, WorldHas};
     pub use traits::{Archetype, ArchetypeHas};
     pub use traits::{Components, View, ViewMut, Borrow};
+    pub use traits::{SelectView, SelectViewMut, SelectBorrow};
 }
